[package]
edition = "2018"
name = "l_re"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = "1.0.125"
serde_derive = "1.0.125"
toml = "0.5.8"
hyper-tls ="0.5.0"
hyper =  { version = "0.14.7", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.15"