[package]
name = "thread"
version = "0.1.0"
authors = ["Jay"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.3"
error-chain = "0.12.1"
lazy_static = "1.4.0"
threadpool = "1.7.1"
num_cpus = "1.11.1"
ring = "0.16.9"
walkdir = "2.2.9"
image = "0.23.0-preview.0"
num = "0.2.0"
