[package]
name = "client"
version = "0.1.0"
authors = ["Jay"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.103"
serde_derive = "1.0.103"
reqwest = "0.9.x"
error-chain = "0.12.1" 
select = "0.4.3" 
url = "2.1.0"
lazy_static = "1.4.0"
regex = "1.3.1" 
mime = "0.3.14"
serde_json = "1.0.44"
